--- a/projects.html
+++ b/projects.html
@@ -221,7 +221,7 @@
         <ul class="submenu" id="rdSubmenu">
           <li><a href="about.html">About</a></li>
           <li><a href="projects.html">Projects</a></li>
-          <li><a href="Publications.html">Publications</a></li>
+          <li><a href="publications.html">Publications</a></li>
           <li><a href="Lab.html">Lab & Innovation</a></li>
         </ul>
       </li>
