--- a/rsrl.html
+++ b/rsrl.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -90,6 +91,10 @@
     .sidebar ul li a.active {
       background: #444;
       color: #2ecc71;
+    }
+
+    .sidebar i {
+      margin-right: 8px;
     }
 
     .submenu {
@@ -199,6 +204,33 @@
         padding: 15px;
       }
     }
+
+    /* Timeline styling */
+    .timeline {
+      position: relative;
+      margin: 20px 0;
+    }
+    .container {
+      padding: 10px 40px;
+      position: relative;
+      width: 50%;
+    }
+    .container.left {
+      left: 0;
+    }
+    .container.right {
+      left: 50%;
+    }
+    .content {
+      padding: 15px;
+      background: white;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+    }
+    .content h3 i {
+      margin-right: 6px;
+      color: #2ecc71;
+    }
   </style>
 </head>
 
@@ -211,66 +243,69 @@
     </div>
   </header>
 
+  <!-- Sidebar -->
   <aside id="sidebar" class="sidebar" aria-label="Main Navigation">
     <button id="close-btn" aria-label="Close menu"><i class="fas fa-times"></i></button>
     <ul>
-      <li><a href="index.html" class="active">Home</a></li>
+      <li><a href="index.html" class="active"><i class="fas fa-home"></i> Home</a></li>
 
       <li>
-        <a class="has-submenu" id="RDToggle">R&D <i class="fas fa-caret-down" style="float:right;"></i></a>
+        <a class="has-submenu" id="RDToggle"><i class="fas fa-flask"></i> R&D <i class="fas fa-caret-down" style="float:right;"></i></a>
         <ul class="submenu" id="rdSubmenu">
-          <li><a href="about.html">About</a></li>
-          <li><a href="projects.html">Projects</a></li>
-          <li><a href="publications.html">Publications</a></li>
-          <li><a href="Lab.html">Lab & Innovation</a></li>
+          <li><a href="about.html"><i class="fas fa-user"></i> About</a></li>
+          <li><a href="projects.html"><i class="fas fa-code"></i> Projects</a></li>
+          <li><a href="publications.html"><i class="fas fa-book"></i> Publications</a></li>
+          <li><a href="Lab.html"><i class="fas fa-lightbulb"></i> Lab & Innovation</a></li>
         </ul>
       </li>
 
       <li>
-        <a class="has-submenu" id="workToggle">Work Experience <i class="fas fa-caret-down" style="float:right;"></i></a>
+        <a class="has-submenu" id="workToggle"><i class="fas fa-briefcase"></i> Work Experience <i class="fas fa-caret-down" style="float:right;"></i></a>
         <ul class="submenu" id="workExpSubmenu">
-          <li><a href="Work.html">Timeline</a></li>
-          <li><a href="rsrl.html">RsRL</a></li>
-          <li><a href="cts.html">Cognizant</a></li>
-          <li><a href="gpsk.html">GPSK</a></li>
-          <li><a href="algotech.html">Algotech</a></li>
-          <li><a href="sharekhan.html">Sharekhan</a></li>
+          <li><a href="Work.html"><i class="fas fa-stream"></i> Timeline</a></li>
+          <li><a href="rsrl.html"><i class="fas fa-industry"></i> RsRL</a></li>
+          <li><a href="cts.html"><i class="fas fa-building"></i> Cognizant</a></li>
+          <li><a href="gpsk.html"><i class="fas fa-chart-line"></i> GPSK</a></li>
+          <li><a href="algotech.html"><i class="fas fa-microchip"></i> Algotech</a></li>
+          <li><a href="sharekhan.html"><i class="fas fa-landmark"></i> Sharekhan</a></li>
         </ul>
       </li>
 
       <li>
-        <a class="has-submenu" id="quantToggle">Quant Research <i class="fas fa-caret-down" style="float:right;"></i></a>
+        <a class="has-submenu" id="quantToggle"><i class="fas fa-chart-pie"></i> Quant Research <i class="fas fa-caret-down" style="float:right;"></i></a>
         <ul class="submenu" id="quantSubmenu">
-          <li><a href="FX.html">FX & IR</a></li>
-          <li><a href="Com.html">Commodity</a></li>
-          <li><a href="Eq.html">Equity</a></li>
-          <li><a href="Crypto.html">Crypto</a></li>
-          <li><a href="research_update.html">Product Design</a></li>
+          <li><a href="FX.html"><i class="fas fa-dollar-sign"></i> FX & IR</a></li>
+          <li><a href="Com.html"><i class="fas fa-oil-can"></i> Commodity</a></li>
+          <li><a href="Eq.html"><i class="fas fa-chart-bar"></i> Equity</a></li>
+          <li><a href="Crypto.html"><i class="fab fa-bitcoin"></i> Crypto</a></li>
+          <li><a href="research_update.html"><i class="fas fa-cogs"></i> Product Design</a></li>
         </ul>
       </li>
 
       <li>
-        <a class="has-submenu" id="ReferenceToggle">Reference <i class="fas fa-caret-down" style="float:right;"></i></a>
+        <a class="has-submenu" id="ReferenceToggle"><i class="fas fa-book-open"></i> Reference <i class="fas fa-caret-down" style="float:right;"></i></a>
         <ul class="submenu" id="ReferenceSubmenu">
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="blog.html">Conference</a></li>
-          <li><a href="blog.html">Lecture Series</a></li>
-          <li><a href="blog.html">Reading List</a></li>
-          <li><a href="blog.html">System Design</a></li>
+          <li><a href="blog.html"><i class="fas fa-pen"></i> Blog</a></li>
+          <li><a href="blog.html"><i class="fas fa-users"></i> Conference</a></li>
+          <li><a href="blog.html"><i class="fas fa-chalkboard-teacher"></i> Lecture Series</a></li>
+          <li><a href="blog.html"><i class="fas fa-book-reader"></i> Reading List</a></li>
+          <li><a href="blog.html"><i class="fas fa-network-wired"></i> System Design</a></li>
         </ul>
       </li>
     </ul>
   </aside>
 
+  <!-- Right Sidebar -->
   <aside id="right-sidebar" class="right-sidebar" aria-label="Context Tools Sidebar">
     <button id="close-btn-right" aria-label="Close right menu"><i class="fas fa-times"></i></button>
     <ul>
-      <li><a href="#">📌 Notes</a></li>
-      <li><a href="#">📅 Schedule</a></li>
-      <li><a href="#">📚 Reading</a></li>
-      <li><a href="#">🧠 Ideas</a></li>
+      <li><a href="#"><i class="fas fa-thumbtack"></i> Notes</a></li>
+      <li><a href="#"><i class="fas fa-calendar-alt"></i> Schedule</a></li>
+      <li><a href="#"><i class="fas fa-book"></i> Reading</a></li>
+      <li><a href="#"><i class="fas fa-brain"></i> Ideas</a></li>
     </ul>
   </aside>
+
 
   <main>
       <h2>RsRL Project Timeline</h2>
@@ -326,9 +361,9 @@
       <a href="mailto:ratanlalmahanta@gmail.com" title="Email"><i class="fas fa-envelope"></i><span class="sr-only">Email</span></a>
     </p>
     <div class="social-media">
-      <a href="https://www.linkedin.com/in/ratanlalmahanta" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-      <a href="https://twitter.com/ratanlalmahanta" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a>
-      <a href="https://github.com/ratanlalmahanta" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+      <a href="https://www.linkedin.com/in/ratanlalmahanta/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+      <a href="https://twitter.com/ratanlalmahanta/" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a>
+      <a href="https://github.com/ratanlalmahanta/" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
       <a href="https://scholar.google.com/citations?user=SpE58EQAAAAJ&hl=en" target="_blank" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
       <a href="https://gemini.google.com/share/a59f97ec4a99" target="_blank" title="Google Gemini"><i class="fas fa-atom"></i></a>
       <a href="https://x.com/i/grok/share/lGBpiRp0JUbOaTs2s3fLUtjHW" target="_blank" title="View on Grok via X"><i class="fas fa-brain"></i></a>
