--- a/projects.html
+++ b/projects.html
@@ -343,7 +343,8 @@
         </div>
 
         <div class="project">
-            <h3><i class="fas fa-chart-bar"></i> CDS Spread Calibration with Merton Model</h3>
+	  <h3><i class="fas fa-robot"></i> <a href="vol.html">CDS Spread Calibration with Merton Model</a></h3>
+           
             <p>Built a Merton structural model for estimating default probabilities and calibrating CDS term structures. Combined historical volatility estimation, firm balance sheet analysis, and ARIMA-based forecasts for forward CDS curve projections and pricing.</p>
         </div>
 
