--- a/projects.html
+++ b/projects.html
@@ -288,7 +288,7 @@
         </div>
 
         <div class="project">
-            <h3><i class="fas fa-chart-line"></i><a href="blog_post_P1.html"> Quant Equity Selection Model</a></h3>
+            <h3><i class="fas fa-chart-line"></i><a href="blog_post_1.html"> Quant Equity Selection Model</a></h3>
             <p>Built a supervised learning framework that dynamically selects equities based on sector rotation signals, Index Rebalancing Engine, macroeconomic indicators,Tail Risk Hedging, and risk-adjusted return forecasts. The model uses ensemble methods and Bayesian optimization for hyperparameter tuning to ensure robust portfolio construction.</p>
         </div>
 
@@ -318,7 +318,7 @@
         </div>
 
         <div class="project">
-            <h3><i class="fas fa-cogs"></i> Quantitative Trading Strategies</h3>
+	  <h3><i class="fas fa-chart-area"></i><a href="vol1.html"> Quantitative Trading Strategies</a></h3>
             <p>Designed and tested alpha-generating trading strategies combining time-series momentum, machine learning classification signals,Stat Arbitarge, and Kelly criterion-based capital allocation. Deployed backtesting platform with walk-forward validation and multi-asset optimization.</p>
         </div>
 
