--- a/vol-old-2.html
+++ b/vol-old-2.html
@@ -65,11 +65,23 @@
       background: #444; color: #2ecc71;
     }
     .sidebar i { margin-right: 8px; }
+    .submenu { display: none; padding-left: 10px; transition: all 0.3s ease-in-out; }
+    .submenu li { padding: 8px 20px; font-weight: normal; }
+    .submenu li a { color: #ccc; font-weight: normal; }
+    .submenu li a:hover { color: #2ecc71; }
     #close-btn {
       position: absolute; top: 10px; right: 15px;
       background: none; border: none; color: white;
       font-size: 1.2em; cursor: pointer;
     }
+    .right-sidebar {
+      position: fixed; top: 0; right: -250px;
+      width: 250px; height: 100%; background: #222;
+      color: white; padding-top: 60px;
+      overflow-y: auto; transition: right 0.3s ease-in-out;
+      z-index: 1000;
+    }
+    .right-sidebar.active { right: 0; }
     main { padding: 20px; max-width: 1000px; margin: auto; }
     h2, h3 { color: #1a1a1a; }
     footer {
@@ -79,12 +91,26 @@
     footer a { color: #ccc; margin: 0 10px; text-decoration: none; }
     footer a:hover { color: #2ecc71; }
     .social-media i { margin: 0 5px; font-size: 1.2em; }
+    .sr-only {
+      position: absolute; left: -9999px;
+      top: auto; width: 1px; height: 1px; overflow: hidden;
+    }
     @media (max-width: 768px) {
       header h1 { font-size: 1.4em; }
       #menu-toggle { font-size: 1.3em; }
       .sidebar ul li { padding: 12px 16px; }
       main { padding: 15px; }
     }
+    /* Timeline styling */
+    .timeline { position: relative; margin: 20px 0; }
+    .container { padding: 10px 40px; position: relative; width: 50%; }
+    .container.left { left: 0; }
+    .container.right { left: 50%; }
+    .content {
+      padding: 15px; background: white;
+      border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+    }
+    .content h3 i { margin-right: 6px; color: #2ecc71; }
   </style>
 </head>
 
@@ -97,67 +123,7 @@
     </div>
   </header>
 
-  <!-- ✅ Sidebar Menu -->
-  <aside id="sidebar" class="sidebar">
-    <button id="close-btn"><i class="fas fa-times"></i></button>
-    <ul>
-      
-      <li><a href="#gbm"><i class="fas fa-chart-line"></i> GBM Dynamics</a></li>
-      <li><a href="#pd"><i class="fas fa-exclamation-triangle"></i> Probability of Default</a></li>
-      <li><a href="#spread"><i class="fas fa-dollar-sign"></i> CDS Spread</a></li>
-      <li><a href="#mc"><i class="fas fa-random"></i> Monte Carlo</a></li>
-      <li><a href="#summary"><i class="fas fa-list"></i> Summary</a></li>
-      <li><a href="#reference"><i class="fas fa-book"></i> Reference</a></li>
-    </ul>
-     <li><a href="index.html" class="active"><i class="fas fa-home"></i> Home</a></li>
-
-      <li>
-        <a class="has-submenu" id="RDToggle"><i class="fas fa-flask"></i> R&D <i class="fas fa-caret-down" style="float:right;"></i></a>
-        <ul class="submenu" id="rdSubmenu">
-          <li><a href="about.html"><i class="fas fa-user"></i> About</a></li>
-          <li><a href="projects.html"><i class="fas fa-code"></i> Projects</a></li>
-          <li><a href="publications.html"><i class="fas fa-book"></i> Publications</a></li>
-          <li><a href="Lab.html"><i class="fas fa-lightbulb"></i> Lab & Innovation</a></li>
-        </ul>
-      </li>
-
-      <li>
-        <a class="has-submenu" id="workToggle"><i class="fas fa-briefcase"></i> Work Experience <i class="fas fa-caret-down" style="float:right;"></i></a>
-        <ul class="submenu" id="workExpSubmenu">
-          <li><a href="Work.html"><i class="fas fa-stream"></i> Timeline</a></li>
-          <li><a href="rsrl.html"><i class="fas fa-industry"></i> RsRL</a></li>
-          <li><a href="cts.html"><i class="fas fa-building"></i> Cognizant</a></li>
-          <li><a href="gpsk.html"><i class="fas fa-chart-line"></i> GPSK</a></li>
-          <li><a href="algotech.html"><i class="fas fa-microchip"></i> Algotech</a></li>
-          <li><a href="sharekhan.html"><i class="fas fa-landmark"></i> Sharekhan</a></li>
-        </ul>
-      </li>
-
-      <li>
-        <a class="has-submenu" id="quantToggle"><i class="fas fa-chart-pie"></i> Quant Research <i class="fas fa-caret-down" style="float:right;"></i></a>
-        <ul class="submenu" id="quantSubmenu">
-          <li><a href="FX.html"><i class="fas fa-dollar-sign"></i> FX & IR</a></li>
-          <li><a href="Com.html"><i class="fas fa-oil-can"></i> Commodity</a></li>
-          <li><a href="Eq.html"><i class="fas fa-chart-bar"></i> Equity</a></li>
-          <li><a href="Crypto.html"><i class="fab fa-bitcoin"></i> Crypto</a></li>
-          <li><a href="research_update.html"><i class="fas fa-cogs"></i> Product Design</a></li>
-        </ul>
-      </li>
-
-      <li>
-        <a class="has-submenu" id="ReferenceToggle"><i class="fas fa-book-open"></i> Reference <i class="fas fa-caret-down" style="float:right;"></i></a>
-        <ul class="submenu" id="ReferenceSubmenu">
-          <li><a href="blog.html"><i class="fas fa-pen"></i> Blog</a></li>
-          <li><a href="blog.html"><i class="fas fa-users"></i> Conference</a></li>
-          <li><a href="blog.html"><i class="fas fa-chalkboard-teacher"></i> Lecture Series</a></li>
-          <li><a href="blog.html"><i class="fas fa-book-reader"></i> Reading List</a></li>
-          <li><a href="blog.html"><i class="fas fa-network-wired"></i> System Design</a></li>
-        </ul>
-      </li>
-
-  </aside>
-
-  <!-- ✅ Main content -->
+  <!-- ✅ Main content with formulas -->
   <main>
     <h1>CDS Pricing with the Merton Model</h1>
     <p>Monte Carlo simulation for CDS spread distribution and stress testing under changing risk factors.</p>
@@ -231,42 +197,25 @@
       </div>
     </section>
   
-    <section id="summary">
-      <h2>Summary</h2>
-      <ul>
-        <li>Model defaults via Merton; compute PD from distance-to-default.</li>
-        <li>Estimate spreads through Monte Carlo using one path per iteration.</li>
-        <li>Stress test $\mu$, $\sigma$, $D$, and $T$ to gauge sensitivity.</li>
-      </ul>
-    </section>
+  <h2>Summary</h2>
+  <ul>
+    <li>Model defaults via Merton; compute PD from distance-to-default.</li>
+    <li>Estimate spreads through Monte Carlo using one path per iteration.</li>
+    <li>Stress test $\mu$, $\sigma$, $D$, and $T$ to gauge sensitivity.</li>
+  </ul>
 
-    <section id="reference">
-      <h2>Reference</h2>
-      <p>Model defaults via Merton; 
-        <a href="https://media.licdn.com/dms/document/media/v2/D4D2DAQEvUmTxqk-R4w/profile-treasury-document-pdf-analyzed/B4DZXWUkKyG8Ag-/0/1743057472138?e=1756339200&v=beta&t=hxxKoAldryOCOMC7gqJdbhqV2l3Aw2ijwPGfmQ-7poE" target="_blank">CDS Pricing</a>.
-      </p>
-    </section>
+  <h2>Reference</h2>
+  <p>Model defaults via Merton; <a href="https://media.licdn.com/dms/document/media/v2/D4D2DAQEvUmTxqk-R4w/profile-treasury-document-pdf-analyzed/B4DZXWUkKyG8Ag-/0/1743057472138?e=1756339200&v=beta&t=hxxKoAldryOCOMC7gqJdbhqV2l3Aw2ijwPGfmQ-7poE" target="_blank">CDS Pricing</a>.</p>
   </main>
 
   <footer>
     <p>&copy; 2025 Ratanlal Mahanta | All Rights Reserved</p>
   </footer>
 
-  <!-- ✅ JS Menu Toggle -->
   <script>
     const sidebar = document.getElementById("sidebar");
     const toggleBtn = document.getElementById("menu-toggle");
     const closeBtn = document.getElementById("close-btn");
-
-    toggleBtn.addEventListener("click", () => {
-      sidebar.classList.add("active");
-      toggleBtn.setAttribute("aria-expanded", "true");
-    });
-
-    closeBtn.addEventListener("click", () => {
-      sidebar.classList.remove("active");
-      toggleBtn.setAttribute("aria-expanded", "false");
-    });
   </script>
 </body>
 </html>
