--- a/projects.html
+++ b/projects.html
@@ -294,7 +294,7 @@
 
         <div class="project">
             <h3><i class="fas fa-chart-area"></i><a href="Heston.html"> Heston Model Calibration for Volatility</a></h3>
-            <p>Implemented a calibration engine for the Heston stochastic volatility model, using least squares fitting to implied volatilities from options markets. Conducted parameter stability analysis, error surface visualizations, and comparative backtests with Black-Scholes and SABR models.</p>
+            <p>Implemented a calibration engine for the Heston stochastic volatility model, using least squares fitting to implied volatilities from options markets. Conducted parameter stability analysis, error surface visualizations, and comparative backtests with MC, Black-Scholes and SABR models.</p>
         </div>
 
         <div class="project">
